# fish-in-a-jit

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
examples/: fish-demo.dmo  fish-demo.yml  fish-jit.rs  fish-standalone.rs
src/: bytecode.rs  dmo.rs  jit.rs  lib.rs  ops_unix.rs  ops_windows.rs  utils.rs
src/jit/: mod.rs  ops.rs
src/tests/: draw_and_print.rs  mod.rs
